--- a/3주차/김용호/김용호.md
+++ b/3주차/김용호/김용호.md
@@ -18,7 +18,7 @@
 - URL,URN은 URI에 포함되는 개념이며 URL은 자원의 위치,URN은 자원의 이름을 말한다.
 - URI는 식별학,URL은 위치를 가리킨다.
 
-![스크린샷 2024-01-16 오전 11.42.06.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%258C%25E1%2585%25A5%25E1%2586%25AB_11.42.06.png)
+<img src="https://github.com/KKYHH/cs-study/blob/main/3%E1%84%8C%E1%85%AE%E1%84%8E%E1%85%A1/%E1%84%80%E1%85%B5%E1%86%B7%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%92%E1%85%A9/URI_URL_URN.png">
 
 **URI (Uniform resource Identifier)**
 
@@ -53,13 +53,13 @@ https://google.com
 
 이것은 **URL이다. 이유는 문자열(google.com)과 프로토콜(https://)을 가지고 있기 때문이다.**
 
-![스크린샷 2024-01-16 오전 11.48.08.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%258C%25E1%2585%25A5%25E1%2586%25AB_11.48.08.png)
+<img src="https://github.com/KKYHH/cs-study/blob/main/3%E1%84%8C%E1%85%AE%E1%84%8E%E1%85%A1/%E1%84%80%E1%85%B5%E1%86%B7%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%92%E1%85%A9/URI_URL_URN_2.png">
 
 <br>
 
 ### URI / URL / URN 구분하기
 
-![스크린샷 2024-01-16 오전 11.55.04.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%258C%25E1%2585%25A5%25E1%2586%25AB_11.55.04.png)
+<img src="https://github.com/KKYHH/cs-study/blob/main/3%E1%84%8C%E1%85%AE%E1%84%8E%E1%85%A1/%E1%84%80%E1%85%B5%E1%86%B7%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%92%E1%85%A9/URI_URL_URN_compare.png">
 
 인터넷 상의 자원의 위치(URL)와 자원의 식별자(URI)는 언뜻 보면 같은 것을 의미하는 듯 하지만 ‘자원의 위치’라는 것은 결국 ‘하나의 파일 위치’를 나타내는 것임을 생각하자.
 
@@ -118,7 +118,7 @@ http://www.naver.com/index.html?page=9923145&id=122
    - 프록시는 클라이언트와 서버 사이에서 동작하는 중간 컴퓨터/머신으로,HTTP 메시지를 전달하거나 변경하는 역할을 한다.
    - 프록시는 캐싱,필터링,로드 밸런싱,인증,로깅 등 다양한 기능을 수행할 수 있다.
 
-   ![스크린샷 2024-01-16 오후 12.31.56.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%2592%25E1%2585%25AE_12.31.56.png)
+<img src="https://github.com/KKYHH/cs-study/blob/main/3%E1%84%8C%E1%85%AE%E1%84%8E%E1%85%A1/%E1%84%80%E1%85%B5%E1%86%B7%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%92%E1%85%A9/SYSTEM.png">
 
 <br>
 
@@ -159,7 +159,7 @@ HTTP는 간단하고 읽기 쉬운 프로토콜로,확장 가능성이 뛰어나
 
 **요청**
 
-![스크린샷 2024-01-16 오후 12.49.38.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%2592%25E1%2585%25AE_12.49.38.png)
+<img src="https://github.com/KKYHH/cs-study/blob/main/3%E1%84%8C%E1%85%AE%E1%84%8E%E1%85%A1/%E1%84%80%E1%85%B5%E1%86%B7%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%92%E1%85%A9/REQUEST.png">
 
 **Method**
 
@@ -181,7 +181,7 @@ HTTP 프로토콜의 버전
 
 **응답**
 
-![스크린샷 2024-01-16 오후 12.55.36.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%2592%25E1%2585%25AE_12.55.36.png)
+<img src="https://github.com/KKYHH/cs-study/blob/main/3%E1%84%8C%E1%85%AE%E1%84%8E%E1%85%A1/%E1%84%80%E1%85%B5%E1%86%B7%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%92%E1%85%A9/RESPONSE.png">
 
 **Version of the protocol**
 
