--- a/3주차/김용호.md
+++ b/3주차/김용호.md
@@ -18,7 +18,7 @@
 - URL,URN은 URI에 포함되는 개념이며 URL은 자원의 위치,URN은 자원의 이름을 말한다.
 - URI는 식별학,URL은 위치를 가리킨다.
 
-![스크린샷 2024-01-16 오전 11.42.06.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%258C%25E1%2585%25A5%25E1%2586%25AB_11.42.06.png)
+<img src="https://github.com/CHZZK-Study/cs-study/assets/102516350/15fbec16-7bd1-48a7-8741-e63e3c983cd4">
 
 **URI (Uniform resource Identifier)**
 
@@ -53,13 +53,13 @@ https://google.com
 
 이것은 **URL이다. 이유는 문자열(google.com)과 프로토콜(https://)을 가지고 있기 때문이다.**
 
-![스크린샷 2024-01-16 오전 11.48.08.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%258C%25E1%2585%25A5%25E1%2586%25AB_11.48.08.png)
+<img src="https://github.com/CHZZK-Study/cs-study/assets/102516350/adbfd3f7-6ece-41f9-8bc0-a6f478f1741b">
 
 <br>
 
 ### URI / URL / URN 구분하기
 
-![스크린샷 2024-01-16 오전 11.55.04.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%258C%25E1%2585%25A5%25E1%2586%25AB_11.55.04.png)
+<img src="https://github.com/CHZZK-Study/cs-study/assets/102516350/288bfff5-87f5-431e-aa02-a098416050e2">
 
 인터넷 상의 자원의 위치(URL)와 자원의 식별자(URI)는 언뜻 보면 같은 것을 의미하는 듯 하지만 ‘자원의 위치’라는 것은 결국 ‘하나의 파일 위치’를 나타내는 것임을 생각하자.
 
@@ -118,7 +118,7 @@ http://www.naver.com/index.html?page=9923145&id=122
    - 프록시는 클라이언트와 서버 사이에서 동작하는 중간 컴퓨터/머신으로,HTTP 메시지를 전달하거나 변경하는 역할을 한다.
    - 프록시는 캐싱,필터링,로드 밸런싱,인증,로깅 등 다양한 기능을 수행할 수 있다.
 
-   ![스크린샷 2024-01-16 오후 12.31.56.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%2592%25E1%2585%25AE_12.31.56.png)
+<img src="https://github.com/CHZZK-Study/cs-study/assets/102516350/dcc72ce3-b61a-48bf-84f9-b2128f7e1881">
 
 <br>
 
@@ -159,7 +159,7 @@ HTTP는 간단하고 읽기 쉬운 프로토콜로,확장 가능성이 뛰어나
 
 **요청**
 
-![스크린샷 2024-01-16 오후 12.49.38.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%2592%25E1%2585%25AE_12.49.38.png)
+<img src="https://github.com/CHZZK-Study/cs-study/assets/102516350/bb0eff77-332a-4d0e-904f-f9042d74536a">
 
 **Method**
 
@@ -181,7 +181,7 @@ HTTP 프로토콜의 버전
 
 **응답**
 
-![스크린샷 2024-01-16 오후 12.55.36.png](%5B%E1%84%82%E1%85%A6%E1%84%90%E1%85%B3%E1%84%8B%E1%85%AF%E1%84%8F%E1%85%B3%5D%20HTTP%20b9cf80530448482c8bb02cdff5c4db28/%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25B3%25E1%2584%2585%25E1%2585%25B5%25E1%2586%25AB%25E1%2584%2589%25E1%2585%25A3%25E1%2586%25BA_2024-01-16_%25E1%2584%258B%25E1%2585%25A9%25E1%2584%2592%25E1%2585%25AE_12.55.36.png)
+<img src="https://github.com/CHZZK-Study/cs-study/assets/102516350/2a547dc1-a51e-4b93-8ab9-5b9636ca62bc">
 
 **Version of the protocol**
 
